--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamegold-cordova",
-  "version": "1.5.7",
+  "version": "1.5.10",
   "description": "Game Gold Core for Cordova",
   "license": "MIT",
   "repository": "git://github.com/bookmansoft/gamegold-cordova",
@@ -24,7 +24,7 @@
     "node": ">=10.4.0"
   },
   "dependencies": {
-    "opn": "^5.4.0"
+    "opn": "5.4.0"
   },
   "main": "./index.js",
   "scripts": {
